tests/snapshots/golden_json__check_matches_its_json_golden.snap
---
source: tests/golden_json.rs
expression: report
---
--- check --format json exit 0 ---
{
  "schema": 1,
  "action": "check",
  "diagnostics": [],
  "entries": [
    {
      "verdict": "allowed",
      "detail": "00-cand.rules: allow perm=execute all : path=/tmp/live/probe-grep",
      "denials": 1,
      "perm": "execute",
      "exe": "/usr/sbin/runuser",
      "path": "/tmp/live/probe-grep",
      "ftype": "application/x-executable",
      "trust": "0",
      "rule": 13
    },
    {
      "verdict": "denied",
      "detail": "no candidate before rule=8 matches; deny_audit perm=open all : ftype=application/x-sharedlib denies it again",
      "denials": 1,
      "perm": "open",
      "exe": "/usr/bin/cat",
      "path": "/tmp/live/probe-lib.so",
      "ftype": "application/x-sharedlib",
      "trust": "0",
      "rule": 8
    },
    {
      "verdict": "denied",
      "detail": "no candidate before rule=5 matches; deny_audit perm=any pattern=ld_so : all denies it again",
      "denials": 1,
      "perm": "execute",
      "exe": "/usr/sbin/runuser",
      "path": "/usr/lib64/ld-linux-x86-64.so.2",
      "ftype": "application/x-sharedlib",
      "trust": "1",
      "rule": 5
    },
    {
      "verdict": "denied",
      "detail": "no candidate before rule=5 matches; deny_audit perm=any pattern=ld_so : all denies it again",
      "denials": 1,
      "perm": "open",
      "exe": "/usr/sbin/runuser",
      "path": "/usr/lib64/ld-linux-x86-64.so.2",
      "ftype": "application/x-sharedlib",
      "trust": "1",
      "rule": 5
    },
    {
      "verdict": "unknown",
      "detail": "exe= is stale (§6): a rule for this record has to name /usr/lib64/ld-linux-x86-64.so.2, not the logged exe=, and no candidate can be matched against a value the log does not carry",
      "denials": 1,
      "perm": "open",
      "exe": "/usr/sbin/runuser",
      "path": "/usr/bin/grep",
      "ftype": "application/x-executable",
      "trust": "1",
      "rule": 5
    },
    {
      "verdict": "unknown",
      "detail": "exe= is stale (§6): a rule for this record has to name /usr/lib64/ld-linux-x86-64.so.2, not the logged exe=, and no candidate can be matched against a value the log does not carry",
      "denials": 1,
      "perm": "open",
      "exe": "/usr/sbin/runuser",
      "path": "/etc/ld.so.cache",
      "ftype": "application/octet-stream",
      "trust": "0",
      "rule": 5
    },
    {
      "verdict": "unknown",
      "detail": "exe= is stale (§6): a rule for this record has to name /usr/lib64/ld-linux-x86-64.so.2, not the logged exe=, and no candidate can be matched against a value the log does not carry",
      "denials": 1,
      "perm": "open",
      "exe": "/usr/sbin/runuser",
      "path": "/usr/lib64/libpcre.so.1.2.12",
      "ftype": "application/x-sharedlib",
      "trust": "1",
      "rule": 5
    },
    {
      "verdict": "unknown",
      "detail": "exe= is stale (§6): a rule for this record has to name /usr/lib64/ld-linux-x86-64.so.2, not the logged exe=, and no candidate can be matched against a value the log does not carry",
      "denials": 1,
      "perm": "open",
      "exe": "/usr/sbin/runuser",
      "path": "/usr/lib64/libsigsegv.so.2.0.6",
      "ftype": "application/x-sharedlib",
      "trust": "1",
      "rule": 5
    },
    {
      "verdict": "unknown",
      "detail": "exe= is stale (§6): a rule for this record has to name /usr/lib64/ld-linux-x86-64.so.2, not the logged exe=, and no candidate can be matched against a value the log does not carry",
      "denials": 1,
      "perm": "open",
      "exe": "/usr/sbin/runuser",
      "path": "/usr/lib64/libc.so.6",
      "ftype": "application/x-sharedlib",
      "trust": "1",
      "rule": 5
    },
    {
      "verdict": "unknown",
      "detail": "exe= is stale (§6): a rule for this record has to name /usr/lib64/ld-linux-x86-64.so.2, not the logged exe=, and no candidate can be matched against a value the log does not carry",
      "denials": 1,
      "perm": "open",
      "exe": "/usr/sbin/runuser",
      "path": "/usr/share/locale/locale.alias",
      "ftype": "text/plain",
      "trust": "0",
      "rule": 5
    },
    {
      "verdict": "unknown",
      "detail": "exe= is stale (§6): a rule for this record has to name /usr/lib64/ld-linux-x86-64.so.2, not the logged exe=, and no candidate can be matched against a value the log does not carry",
      "denials": 1,
      "perm": "open",
      "exe": "/usr/sbin/runuser",
      "path": "/usr/lib/locale/en_US.utf8/LC_IDENTIFICATION",
      "ftype": "application/octet-stream",
      "trust": "1",
      "rule": 5
    },
    {
      "verdict": "unknown",
      "detail": "exe= is stale (§6): a rule for this record has to name /usr/lib64/ld-linux-x86-64.so.2, not the logged exe=, and no candidate can be matched against a value the log does not carry",
      "denials": 1,
      "perm": "open",
      "exe": "/usr/sbin/runuser",
      "path": "/usr/lib64/gconv/gconv-modules.cache",
      "ftype": "application/octet-stream",
      "trust": "0",
      "rule": 5
    },
    {
      "verdict": "unknown",
      "detail": "exe= is stale (§6): a rule for this record has to name /usr/lib64/ld-linux-x86-64.so.2, not the logged exe=, and no candidate can be matched against a value the log does not carry",
      "denials": 1,
      "perm": "open",
      "exe": "/usr/sbin/runuser",
      "path": "/usr/lib/locale/en_US.utf8/LC_MEASUREMENT",
      "ftype": "application/octet-stream",
      "trust": "1",
      "rule": 5
    },
    {
      "verdict": "unknown",
      "detail": "exe= is stale (§6): a rule for this record has to name /usr/lib64/ld-linux-x86-64.so.2, not the logged exe=, and no candidate can be matched against a value the log does not carry",
      "denials": 1,
      "perm": "open",
      "exe": "/usr/sbin/runuser",
      "path": "/usr/lib/locale/en_US.utf8/LC_TELEPHONE",
      "ftype": "application/octet-stream",
      "trust": "1",
      "rule": 5
    },
    {
      "verdict": "unknown",
      "detail": "exe= is stale (§6): a rule for this record has to name /usr/lib64/ld-linux-x86-64.so.2, not the logged exe=, and no candidate can be matched against a value the log does not carry",
      "denials": 1,
      "perm": "open",
      "exe": "/usr/sbin/runuser",
      "path": "/usr/lib/locale/en_US.utf8/LC_ADDRESS",
      "ftype": "application/octet-stream",
      "trust": "1",
      "rule": 5
    },
    {
      "verdict": "unknown",
      "detail": "exe= is stale (§6): a rule for this record has to name /usr/lib64/ld-linux-x86-64.so.2, not the logged exe=, and no candidate can be matched against a value the log does not carry",
      "denials": 1,
      "perm": "open",
      "exe": "/usr/sbin/runuser",
      "path": "/usr/lib/locale/en_US.utf8/LC_NAME",
      "ftype": "application/octet-stream",
      "trust": "1",
      "rule": 5
    },
    {
      "verdict": "unknown",
      "detail": "exe= is stale (§6): a rule for this record has to name /usr/lib64/ld-linux-x86-64.so.2, not the logged exe=, and no candidate can be matched against a value the log does not carry",
      "denials": 1,
      "perm": "open",
      "exe": "/usr/sbin/runuser",
      "path": "/usr/lib/locale/en_US.utf8/LC_PAPER",
      "ftype": "application/octet-stream",
      "trust": "1",
      "rule": 5
    },
    {
      "verdict": "unknown",
      "detail": "exe= is stale (§6): a rule for this record has to name /usr/lib64/ld-linux-x86-64.so.2, not the logged exe=, and no candidate can be matched against a value the log does not carry",
      "denials": 1,
      "perm": "open",
      "exe": "/usr/sbin/runuser",
      "path": "/usr/lib/locale/en_US.utf8/LC_MESSAGES/SYS_LC_MESSAGES",
      "ftype": "application/octet-stream",
      "trust": "1",
      "rule": 5
    },
    {
      "verdict": "unknown",
      "detail": "exe= is stale (§6): a rule for this record has to name /usr/lib64/ld-linux-x86-64.so.2, not the logged exe=, and no candidate can be matched against a value the log does not carry",
      "denials": 1,
      "perm": "open",
      "exe": "/usr/sbin/runuser",
      "path": "/usr/lib/locale/en_US.utf8/LC_MONETARY",
      "ftype": "application/octet-stream",
      "trust": "1",
      "rule": 5
    },
    {
      "verdict": "unknown",
      "detail": "exe= is stale (§6): a rule for this record has to name /usr/lib64/ld-linux-x86-64.so.2, not the logged exe=, and no candidate can be matched against a value the log does not carry",
      "denials": 1,
      "perm": "open",
      "exe": "/usr/sbin/runuser",
      "path": "/usr/lib/locale/en_US.utf8/LC_COLLATE",
      "ftype": "application/octet-stream",
      "trust": "1",
      "rule": 5
    },
    {
      "verdict": "unknown",
      "detail": "exe= is stale (§6): a rule for this record has to name /usr/lib64/ld-linux-x86-64.so.2, not the logged exe=, and no candidate can be matched against a value the log does not carry",
      "denials": 1,
      "perm": "open",
      "exe": "/usr/sbin/runuser",
      "path": "/usr/lib/locale/en_US.utf8/LC_TIME",
      "ftype": "application/octet-stream",
      "trust": "1",
      "rule": 5
    },
    {
      "verdict": "unknown",
      "detail": "exe= is stale (§6): a rule for this record has to name /usr/lib64/ld-linux-x86-64.so.2, not the logged exe=, and no candidate can be matched against a value the log does not carry",
      "denials": 1,
      "perm": "open",
      "exe": "/usr/sbin/runuser",
      "path": "/usr/lib/locale/en_US.utf8/LC_NUMERIC",
      "ftype": "application/octet-stream",
      "trust": "1",
      "rule": 5
    },
    {
      "verdict": "unknown",
      "detail": "exe= is stale (§6): a rule for this record has to name /usr/lib64/ld-linux-x86-64.so.2, not the logged exe=, and no candidate can be matched against a value the log does not carry",
      "denials": 1,
      "perm": "open",
      "exe": "/usr/sbin/runuser",
      "path": "/usr/lib/locale/C.utf8/LC_CTYPE",
      "ftype": "application/octet-stream",
      "trust": "1",
      "rule": 5
    },
    {
      "verdict": "unknown",
      "detail": "exe= is stale (§6): a rule for this record has to name /usr/lib64/ld-linux-x86-64.so.2, not the logged exe=, and no candidate can be matched against a value the log does not carry",
      "denials": 1,
      "perm": "open",
      "exe": "/usr/sbin/runuser",
      "path": "/etc/hostname",
      "ftype": "text/plain",
      "trust": "0",
      "rule": 5
    }
  ]
}
--- stderr ---
