tests/snapshots/golden_json__fixtures_match_their_json_goldens@handwritten-not-denials.log.snap
---
source: tests/golden_json.rs
expression: report
input_file: tests/fixtures/handwritten-not-denials.log
---
--- why --format json exit 0 ---
{
  "schema": 1,
  "action": "why",
  "diagnostics": [],
  "entries": []
}
--- stderr ---
