tests/snapshots/golden_json__fixtures_match_their_json_goldens@rocky10-base-syslog-framing-syslog-raw.log.snap
---
source: tests/golden_json.rs
expression: report
input_file: tests/fixtures/rocky10-base-syslog-framing-syslog-raw.log
---
--- why --format json exit 0 ---
{
  "schema": 1,
  "action": "why",
  "diagnostics": [
    {
      "line": null,
      "msg": "new file: none recommended (rules.d/ not read: --no-conf, legacy fapolicyd.rules, or unreadable)"
    },
    {
      "line": null,
      "msg": "12 untrusted path(s) need a trust entry, not a rule: run rulesteward fapolicyd trust on the same input"
    },
    {
      "line": null,
      "msg": "57 denial(s) need a rule, not a trust entry: run rulesteward fapolicyd rules on the same input"
    }
  ],
  "entries": [
    {
      "rule": 1,
      "file": null,
      "text": null,
      "denials": 1,
      "subject_side": null,
      "rules": 0,
      "trust": 1
    },
    {
      "rule": 2,
      "file": null,
      "text": null,
      "denials": 188,
      "subject_side": null,
      "rules": 57,
      "trust": 11
    }
  ]
}
--- stderr ---
