tests/snapshots/golden_json__fixtures_match_their_json_goldens@rocky8-base-edge-paths.log.snap
---
source: tests/golden_json.rs
expression: report
input_file: tests/fixtures/rocky8-base-edge-paths.log
---
--- why --format json exit 0 ---
{
  "schema": 1,
  "action": "why",
  "diagnostics": [
    {
      "line": null,
      "msg": "11 untrusted path(s) need a trust entry, not a rule: run rulesteward fapolicyd trust on the same input"
    }
  ],
  "entries": [
    {
      "rule": 13,
      "file": null,
      "text": null,
      "denials": 14,
      "subject_side": null,
      "rules": 0,
      "trust": 11
    }
  ]
}
--- stderr ---
